# RUST-Asynchronous-Chat-Server

./: .env.example  CHAT_SERVER.md  Cargo.toml  FILE_INDEXER.md  README.md  TESTING_GUIDE.md  USAGE.md
migrations/: 20251107000000_create_users_table.sql
src/: lib.rs  main.rs  tests.rs
src/config/: environment.rs  mod.rs
src/config/env/: app.rs  auth.rs  database.rs  mod.rs
src/infrastructure/db/: connection.rs  mod.rs
src/modules/: mod.rs
src/modules/auth/: mod.rs
src/modules/auth/dto/: auth_dto.rs
src/modules/auth/entities/: user.rs
src/modules/auth/repositories/: auth_repository.rs  mod.rs
src/modules/auth/service/: auth_service.rs  mod.rs
src/modules/auth/utils/: jwt.rs
src/modules/chat/: client.rs  server.rs
src/modules/file_indexer/: mod.rs  scanner.rs  service.rs
src/routes/: auth_routes.rs  chat_routes.rs  file_routes.rs  mod.rs
src/utils/: logger.rs
